[tool.poetry]
name = "1"
version = "0.1.0"
description = "FastAPI Mini Project"
authors = ["Team Project <grrr127@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aerich = "0.8.1"
tomlkit = "0.13.2"
pydantic-settings = "2.10.1"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
httpx = "^0.28.1"
beautifulsoup4 = "^4.13.5"

[tool.poetry.dependencies.tortoise-orm]
version = "0.23.0"
extras = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
ruff = "0.8.2"

[tool.aerich]
tortoise_orm = "app.db.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "I", "UP"]
ignore = ["D100", "D104", "D401"]  # 예시: Docstring 강제하지 않음

[tool.ruff.isort]
known-first-party = ["app"]
combine-as-imports = true